# streaming_IoT

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
connectors/: create-connectors.sh  new-session-mongo-sink.json
dockers/fastapi-app/: Dockerfile
dockers/flink-app/: Dockerfile
dockers/kafka-connect-custom/: Dockerfile
dockers/kafka-connect-simple/: Dockerfile
dockers/mqtt-bridge/: Dockerfile
docs/: system_architecture.md
fastapi-app/: README.md  pyproject.toml  run.py
fastapi-app/app/: config.py  consumer.py  db_manager.py  main.py  manager.py
fastapi-app/app/routers/: sessions.py  websockets.py
fastapi-app/tests/: test_aggregate_batch.py  test_batch_functionality.py
flink-app/: pom.xml
frontend/: Dockerfile  index.html  script.js  simple_server.py  style.css
k8s-helm/: Chart.yaml  README.md  values.yaml
k8s-helm/templates/: eso-app-external.yaml  eso-ecr-external.yaml  eso-ecr-generator.yaml  external-secrets.yaml  fast-api.yaml  flink-app.yaml  ingress.yaml  kafka-cluster.yaml  kafka-connect.yaml  kafka-topics.yaml  kafka-ui.yaml  mongodb.yaml  mosquitto.yaml  mqtt-bridge.yaml
kafka-topics-init/: README.md  create_topics.sh
mosquitto/config/: mosquitto.conf
mqtt-bridge/: README.md  go.mod  go.sum
mqtt-bridge/cmd/mqtt-bridge/: main.go
mqtt-bridge/config/: config.go
mqtt-bridge/connectors/: kafka.go  kafka_test.go  mqtt.go  mqtt_test.go
mqtt-bridge/parser/: crc.go  parser.go
sensor-simulator/: check_sensor_data.py  read_data.py  requirements.txt  simulator.py
(+32 files in other folders)
